Replaced splashimage with higher res image, changeed color assets, remodeled logindmodal and home first page

--- a/front-end/src/assets/utils/_colors.scss
+++ b/front-end/src/assets/utils/_colors.scss
@@ -1,7 +1,7 @@
 //base pink shades
-$rose_quartz: #F2A7C5; //this color is in between the two logo colors
+$rose_quartz: #F694B9; //this color is in between the two logo colors
 $logo_light_pink: #F7CDC9;
-$logo_dark_pink: #ED95C2;
+$logo_dark_pink: #F580AC;
 $cherry: #CD2D64;
 $dim_cherry: #b02858;
 
