--- a/front-end/src/assets/utils/_colors.scss
+++ b/front-end/src/assets/utils/_colors.scss
@@ -1,6 +1,6 @@
 //base pink shades
-$rose_quartz: #F694B9; //this color is in between the two logo colors
-$logo_light_pink: #F7CDC9;
+$rose_quartz: #F1A8C5; //this color is in between the two logo colors
+$logo_light_pink: #EBB2C2;
 $logo_dark_pink: #F580AC;
 $cherry: #CD2D64;
 $dim_cherry: #b02858;
