Large changes. Moved layout files to layout component folder, added new assets. Separated Home Page into components (one, two, and three). Added/redesigned scss

--- a/front-end/src/components/layout/Footer.scss
+++ b/front-end/src/components/layout/Footer.scss
@@ -1,9 +1,9 @@
-@import '../assets/utils/_colors.scss';
+@import '../../assets/utils/_colors.scss';
 
 .footer {
   background-color: $noir;
   color: $snow_white;
-  padding: 20px 100px 10px 100px;
+  padding: 30px 150px 10px 150px;
   height: 40vh;
   margin-top: 5%;
 
