--- a/front-end/src/components/layout/HomePageOne.scss
+++ b/front-end/src/components/layout/HomePageOne.scss
@@ -4,18 +4,17 @@
     display: flex; 
     justify-content: center;
     height: 90vh;
+    margin-top: -2%;
   
   &__firstContainer {
     display: flex;
     width: 100%;
     height: auto;
-    background: url("../../assets/home_page_images/splashimage.png") no-repeat center center fixed; 
+    background: url("../../assets/home_page_images/splashimage.jpg") no-repeat center center fixed; 
     background-size: cover;
     background-attachment: scroll;
     text-align: center;
     align-items: center;
-    border: 3px solid $noir;
-    border-radius: 10px;
 
     &__middleContainer {
       max-width: 70%;
