--- a/front-end/src/components/layout/HomePageOne.scss
+++ b/front-end/src/components/layout/HomePageOne.scss
@@ -17,9 +17,8 @@
     align-items: center;
 
     &__middleContainer {
-      max-width: 70%;
-      padding: 18px 14px;
-      max-height: 40%;
+      max-width: 50%;
+      padding: 32px;
       margin: 0 auto;
       text-align: center;
       background-color: rgba($noir, 0.85);
@@ -41,7 +40,7 @@
   &__quote {
     color: $snow_white;
     width: 80%;
-    margin: 20px auto;
+    margin: 12px auto;
     font-size: 16px;
   }
 
