--- a/front-end/src/components/layout/HomePageThree.scss
+++ b/front-end/src/components/layout/HomePageThree.scss
@@ -35,5 +35,21 @@
             color: $rose_quartz;
             font-size: xx-large;
         }
+
+        button {
+            min-width: 144px;
+            min-height: 50px;
+            padding: 10px;
+            font-weight: bold;
+            font-size: large;
+            border: none;
+            color: $cherry;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: $rose_quartz;
+        }
     }
 }
