--- a/front-end/src/components/venues/ShowVenue.scss
+++ b/front-end/src/components/venues/ShowVenue.scss
@@ -1,14 +1,96 @@
 @import '../../assets/utils/_colors.scss';
 
 .venue {
+  display: flex;
+  flex-direction: column;
+  margin-top: -5%;
+  background-color: $noir;
+  
   &__backButton {
-    position: absolute;
-    left: 10%;
-    top: 15%;
+    width: 150px;
+    float: left;
+    background-color: $snow_white;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 5px;
+    margin: 10px 0px 0px 10px;
+
+    a {
+      color: $cherry;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  }
+
+  &__infoGrid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    color: $rose_quartz;
+    min-height: 90vh;
+    padding: 20px 30px;
+
+    &__firstCell {
+      position: relative;
+      border-radius: 10px;
+      width: 100%;
+      height: 90%;
+      overflow: hidden;
+    
+      h3 {
+        position: absolute;
+        bottom: 0;
+        background-color: $noir;
+        width: 100%;
+        padding: 15px;
+        margin: 0;
+        color: $cherry;
+      }
+    }
+
+    &__secondCell {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      &__contentWrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: $midnight_plum;
+        padding: 20px 30px;
+        border: solid $rose_quartz;
+        border-radius: 15px;
+        width: 80%;
+        min-height: 80%;
+        max-height: 90%;
+
+        h1 {
+          font-size: 32px;
+          color: $cherry;
+        }
+
+        button {
+          background-color: $snow_white;
+          color: $cherry;
+          padding: 10px 15px;
+          border-radius: 10px;
+          border: none;
+          font-size: large;
+          font-weight: bold;
+          cursor: pointer;
+        }
+        
+        button:hover {
+          background-color: $dim_snow_white;
+        }
+      }
+    }
   }
 
   &__reviewGrid {
-    // display: grid;
+    display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-content: center;
     justify-items: center;
@@ -19,49 +101,20 @@
     span {
       color: $cherry;
     }
-  }
 
-  &__photoWrap {
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
-    justify-items: center;
-    text-align: center;
-    border: 10px solid $midnight_plum;
-    background-color: $midnight_plum;
-    margin-right: 2%;
+    &__photoWrap {
+      display: inline-block;
+      justify-content: center;
+      align-items: center;
+      justify-items: center;
+      text-align: center;
+      border: 10px solid $midnight_plum;
+      background-color: $midnight_plum;
+      margin-right: 2%;
 
-    &__photo {
-      width: 300px;
-      height: auto;
-    }
-  }
-
-  &__infoGrid {
-    justify-items: center;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin-right: 2%;
-    margin-left: 2%;
-
-    &__firstCell {
-      background-color: #051A42;
-      padding: 3%;
-      border: solid #F4C744;
-      border-radius: 15px;
-      width: 80%;
-      max-height: 70%;
-
-      &__venueName {
-        font-size: 45px;
-      }
-    }
-
-    &__secondCell {
-      &__venueImage {
-        width: 80%;
-        max-height: 90%;
-        border: 10px solid #061A43;
+      &__photo {
+        width: 200px;
+        height: auto;
       }
     }
   }
