--- a/front-end/src/components/user/Onboarding.scss
+++ b/front-end/src/components/user/Onboarding.scss
@@ -114,7 +114,7 @@
         text-align: center;
         margin: auto;
         background-color: $cherry;
-        color: $noir;
+        color: $snow_white;
         border: 2px solid $noir;
         border-radius: 10px;
         padding: 10px 15px;
