--- a/front-end/src/components/auth/EditProfile.scss
+++ b/front-end/src/components/auth/EditProfile.scss
@@ -23,11 +23,8 @@
     color: green;
   }
 
-  .bold {
-    font-weight: bold;
-  }
-
   &__form {
+    color: $snow_white;
     
       &__infoSection {
         border: 1px solid $cherry;
@@ -40,24 +37,10 @@
         width: 60%;
         padding: 3%;
         
-        &__inputLabelWrap {
+        &__nameAgeWrapper {
           display: block;
           margin-top: 3%;
           justify-content: center;
-          
-          label {
-            display: inline-block;
-            font-weight: bold;
-            width: 5%;
-            margin-right: 5%;
-          }
-
-          input {
-            border-radius: 5px;
-            width: 50%;
-            margin-left: 7%;
-            margin-right: 7%;
-          }
         }
 
         &__bevHeader {
@@ -65,6 +48,21 @@
           font-weight: bold;
           text-decoration: underline;
         }
+      }
+
+      label {
+        color: $cherry;
+        display: inline-block;
+        font-weight: bold;
+        width: 100px;
+        margin-right: 5%;
+      }
+
+      input {
+        border-radius: 5px;
+        width: 200px;
+        margin-left: 7%;
+        margin-right: 7%;
       }
 
       &__buttonWrapper {
